// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createThemedComponent demo examples create-styled-component 1`] = `
.glamor-1,
[data-glamor-1] {
  outline: 3px dashed mediumvioletred;
  font-size: 2.125em;
}

.glamor-0,
[data-glamor-0] {
  background-color: lavender;
  color: #333840;
  display: inline-block;
  outline: 3px dashed mediumvioletred;
  padding: 0.5em;
  font-size: 2.125em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    () => {
      const MyStyledSample = createStyledComponent(Sample, ({ theme }) => ({
        outline: '3px dashed mediumvioletred',
        fontSize: theme.fontSize_h1
      }));

      return <MyStyledSample />;
    }
  "
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "Sample": [Function],
          "createStyledComponent": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "Sample": [Function],
            "createStyledComponent": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <wrappedPFC>
              <glamorous(Sample)>
                <Sample
                  className="glamor-1"
                >
                  <glamorous(span)
                    className="glamor-1"
                  >
                    <span
                      className="glamor-0"
                    >
                      Sample
                    </span>
                  </glamorous(span)>
                </Sample>
              </glamorous(Sample)>
            </wrappedPFC>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`createThemedComponent demo examples create-themed-component 1`] = `
.glamor-0,
[data-glamor-0] {
  background-color: #c2dbfc;
  color: mediumvioletred;
  display: inline-block;
  outline: 1px solid #c8d1e0;
  padding: 0.5em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    () => {
      const MyThemedSample = createThemedComponent(Sample, ({ theme }) => ({
        color_text: 'mediumvioletred',
        Sample_backgroundColor: theme.color_theme_20
      }));

      return <MyThemedSample />;
    }"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "Sample": [Function],
          "createThemedComponent": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "Sample": [Function],
            "createThemedComponent": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <wrappedPFC>
              <ThemedComponent>
                <Themed(Sample)
                  theme={
                    Object {
                      "backgroundColor_danger": "#db2929",
                      "backgroundColor_danger_active": "#c71818",
                      "backgroundColor_danger_activeMuted": "#f79999",
                      "backgroundColor_danger_focus": "#db2929",
                      "backgroundColor_danger_hover": "#eb4d4d",
                      "backgroundColor_disabled": "#ebeff5",
                      "backgroundColor_input_danger": "#fce3e3",
                      "backgroundColor_input_success": "#e8fcf2",
                      "backgroundColor_input_warning": "#fcf1dc",
                      "backgroundColor_link_focus": "#dde3ed",
                      "backgroundColor_success": "#0a8f4c",
                      "backgroundColor_success_active": "#06783f",
                      "backgroundColor_success_activeMuted": "#95f5c3",
                      "backgroundColor_success_focus": "#0a8f4c",
                      "backgroundColor_success_hover": "#10a35a",
                      "backgroundColor_warning": "#e05b2b",
                      "backgroundColor_warning_active": "#cf4615",
                      "backgroundColor_warning_activeMuted": "#fab69d",
                      "backgroundColor_warning_focus": "#e05b2b",
                      "backgroundColor_warning_hover": "#ed774c",
                      "borderColor": "#c8d1e0",
                      "borderColor_active": "#4a89e8",
                      "borderColor_danger": "#ad0e0e",
                      "borderColor_danger_active": "#7d0606",
                      "borderColor_danger_focus": "#c71818",
                      "borderColor_danger_hover": "#db2929",
                      "borderColor_focus": "#164ea8",
                      "borderColor_hover": "#2e6fd9",
                      "borderColor_success": "#0a8f4c",
                      "borderColor_success_active": "#046132",
                      "borderColor_success_focus": "#06783f",
                      "borderColor_success_hover": "#1fc06f",
                      "borderColor_warning": "#d19411",
                      "borderColor_warning_active": "#916504",
                      "borderColor_warning_focus": "#cf4615",
                      "borderColor_warning_hover": "#e3a322",
                      "borderRadius_1": "0.1875em",
                      "color_black": "#1d1f24",
                      "color_caption": "#58606e",
                      "color_gray_10": "#f5f7fa",
                      "color_gray_100": "#333840",
                      "color_gray_20": "#ebeff5",
                      "color_gray_30": "#dde3ed",
                      "color_gray_40": "#c8d1e0",
                      "color_gray_50": "#afbacc",
                      "color_gray_60": "#8e99ab",
                      "color_gray_70": "#707a8a",
                      "color_gray_80": "#58606e",
                      "color_gray_90": "#434a54",
                      "color_placeholder": "#8e99ab",
                      "color_text": "#333840",
                      "color_text_danger": "#ad0e0e",
                      "color_text_danger_active": "#940909",
                      "color_text_danger_focus": "#ad0e0e",
                      "color_text_danger_hover": "#c71818",
                      "color_text_disabled": "#afbacc",
                      "color_text_ondanger": "#fff",
                      "color_text_onprimary": "#fff",
                      "color_text_onsuccess": "#fff",
                      "color_text_onwarning": "#fff",
                      "color_text_primary": "#164ea8",
                      "color_text_primary_active": "#114091",
                      "color_text_primary_focus": "#164ea8",
                      "color_text_primary_hover": "#1f5dc2",
                      "color_text_success": "#06783f",
                      "color_text_success_active": "#046132",
                      "color_text_success_focus": "#06783f",
                      "color_text_success_hover": "#0a8f4c",
                      "color_text_warning": "#bd3909",
                      "color_text_warning_active": "#a83207",
                      "color_text_warning_focus": "#bd3909",
                      "color_text_warning_hover": "#cf4615",
                      "color_theme_10": "#e6eefc",
                      "color_theme_100": "#0f397d",
                      "color_theme_20": "#c2dbfc",
                      "color_theme_30": "#9dc2fa",
                      "color_theme_40": "#72a5f2",
                      "color_theme_50": "#4a89e8",
                      "color_theme_60": "#2e6fd9",
                      "color_theme_70": "#1f5dc2",
                      "color_theme_80": "#164ea8",
                      "color_theme_90": "#114091",
                      "color_white": "#fff",
                      "direction": "ltr",
                      "fontFamily": "Open Sans",
                      "fontFamily_monospace": "monospace",
                      "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
                      "fontSize_base": 16,
                      "fontSize_h1": "2.125em",
                      "fontSize_h2": "1.75em",
                      "fontSize_h3": "1.375em",
                      "fontSize_h4": "1.125em",
                      "fontSize_h5": "0.875em",
                      "fontSize_h6": "0.875em",
                      "fontSize_mouse": "0.6875em",
                      "fontSize_prose": "1em",
                      "fontSize_ui": "0.875em",
                      "fontWeight_bold": 700,
                      "fontWeight_extraBold": 800,
                      "fontWeight_regular": 400,
                      "fontWeight_semiBold": 600,
                      "lineHeight": 1.25,
                      "lineHeight_prose": 1.5,
                      "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
                      "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
                      "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
                      "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
                      "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
                      "size_jumbo": "3.25em",
                      "size_large": "2.5em",
                      "size_medium": "2em",
                      "size_small": "1.5em",
                      "space_inline_lg": "1.5em",
                      "space_inline_md": "1em",
                      "space_inline_sm": "0.5em",
                      "space_inline_xl": "2em",
                      "space_inline_xs": "0.25em",
                      "space_inline_xxl": "4em",
                      "space_inline_xxs": "0.125em",
                      "space_inset_lg": "1.5em",
                      "space_inset_md": "1em",
                      "space_inset_sm": "0.5em",
                      "space_stack_lg": "1.5em",
                      "space_stack_md": "1em",
                      "space_stack_sm": "0.5em",
                      "space_stack_xl": "2em",
                      "space_stack_xs": "0.25em",
                      "space_stack_xxl": "4em",
                      "space_stack_xxs": "0.125em",
                      "zIndex_100": 100,
                      "zIndex_1600": 1600,
                      "zIndex_200": 200,
                      "zIndex_400": 400,
                      "zIndex_800": 800,
                    }
                  }
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "Sample_backgroundColor": "#c2dbfc",
                        "color_text": "mediumvioletred",
                      }
                    }
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "Sample_backgroundColor": "#c2dbfc",
                          "color_text": "mediumvioletred",
                        }
                      }
                    >
                      <Sample>
                        <glamorous(span)
                          className={undefined}
                        >
                          <span
                            className="glamor-0"
                          >
                            Sample
                          </span>
                        </glamorous(span)>
                      </Sample>
                    </ThemeProvider>
                  </ThemeProvider>
                </Themed(Sample)>
              </ThemedComponent>
            </wrappedPFC>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`createThemedComponent renders a Link correctly with a custom theme function 1`] = `
.glamor-0,
[data-glamor-0] {
  color: #ad0e0e;
  text-decoration: none;
}

.glamor-0:hover,
[data-glamor-0]:hover,
.glamor-0[data-simulate-hover],
[data-glamor-0][data-simulate-hover] {
  color: #1f5dc2;
  text-decoration: underline;
}

.glamor-0:focus,
[data-glamor-0]:focus,
.glamor-0[data-simulate-focus],
[data-glamor-0][data-simulate-focus] {
  color: #164ea8;
  outline: 1px solid #164ea8;
  outline-offset: 2px;
}

.glamor-0:active,
[data-glamor-0]:active,
.glamor-0[data-simulate-active],
[data-glamor-0][data-simulate-active] {
  color: #114091;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <ThemedComponent>
      <Themed(Link)
        theme={
          Object {
            "backgroundColor_danger": "#db2929",
            "backgroundColor_danger_active": "#c71818",
            "backgroundColor_danger_activeMuted": "#f79999",
            "backgroundColor_danger_focus": "#db2929",
            "backgroundColor_danger_hover": "#eb4d4d",
            "backgroundColor_disabled": "#ebeff5",
            "backgroundColor_input_danger": "#fce3e3",
            "backgroundColor_input_success": "#e8fcf2",
            "backgroundColor_input_warning": "#fcf1dc",
            "backgroundColor_link_focus": "#dde3ed",
            "backgroundColor_success": "#0a8f4c",
            "backgroundColor_success_active": "#06783f",
            "backgroundColor_success_activeMuted": "#95f5c3",
            "backgroundColor_success_focus": "#0a8f4c",
            "backgroundColor_success_hover": "#10a35a",
            "backgroundColor_warning": "#e05b2b",
            "backgroundColor_warning_active": "#cf4615",
            "backgroundColor_warning_activeMuted": "#fab69d",
            "backgroundColor_warning_focus": "#e05b2b",
            "backgroundColor_warning_hover": "#ed774c",
            "borderColor": "#c8d1e0",
            "borderColor_active": "#4a89e8",
            "borderColor_danger": "#ad0e0e",
            "borderColor_danger_active": "#7d0606",
            "borderColor_danger_focus": "#c71818",
            "borderColor_danger_hover": "#db2929",
            "borderColor_focus": "#164ea8",
            "borderColor_hover": "#2e6fd9",
            "borderColor_success": "#0a8f4c",
            "borderColor_success_active": "#046132",
            "borderColor_success_focus": "#06783f",
            "borderColor_success_hover": "#1fc06f",
            "borderColor_warning": "#d19411",
            "borderColor_warning_active": "#916504",
            "borderColor_warning_focus": "#cf4615",
            "borderColor_warning_hover": "#e3a322",
            "borderRadius_1": "0.1875em",
            "color_black": "#1d1f24",
            "color_caption": "#58606e",
            "color_gray_10": "#f5f7fa",
            "color_gray_100": "#333840",
            "color_gray_20": "#ebeff5",
            "color_gray_30": "#dde3ed",
            "color_gray_40": "#c8d1e0",
            "color_gray_50": "#afbacc",
            "color_gray_60": "#8e99ab",
            "color_gray_70": "#707a8a",
            "color_gray_80": "#58606e",
            "color_gray_90": "#434a54",
            "color_placeholder": "#8e99ab",
            "color_text": "#333840",
            "color_text_danger": "#ad0e0e",
            "color_text_danger_active": "#940909",
            "color_text_danger_focus": "#ad0e0e",
            "color_text_danger_hover": "#c71818",
            "color_text_disabled": "#afbacc",
            "color_text_ondanger": "#fff",
            "color_text_onprimary": "#fff",
            "color_text_onsuccess": "#fff",
            "color_text_onwarning": "#fff",
            "color_text_primary": "#164ea8",
            "color_text_primary_active": "#114091",
            "color_text_primary_focus": "#164ea8",
            "color_text_primary_hover": "#1f5dc2",
            "color_text_success": "#06783f",
            "color_text_success_active": "#046132",
            "color_text_success_focus": "#06783f",
            "color_text_success_hover": "#0a8f4c",
            "color_text_warning": "#bd3909",
            "color_text_warning_active": "#a83207",
            "color_text_warning_focus": "#bd3909",
            "color_text_warning_hover": "#cf4615",
            "color_theme_10": "#e6eefc",
            "color_theme_100": "#0f397d",
            "color_theme_20": "#c2dbfc",
            "color_theme_30": "#9dc2fa",
            "color_theme_40": "#72a5f2",
            "color_theme_50": "#4a89e8",
            "color_theme_60": "#2e6fd9",
            "color_theme_70": "#1f5dc2",
            "color_theme_80": "#164ea8",
            "color_theme_90": "#114091",
            "color_white": "#fff",
            "direction": "ltr",
            "fontFamily": "Open Sans",
            "fontFamily_monospace": "monospace",
            "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
            "fontSize_base": 16,
            "fontSize_h1": "2.125em",
            "fontSize_h2": "1.75em",
            "fontSize_h3": "1.375em",
            "fontSize_h4": "1.125em",
            "fontSize_h5": "0.875em",
            "fontSize_h6": "0.875em",
            "fontSize_mouse": "0.6875em",
            "fontSize_prose": "1em",
            "fontSize_ui": "0.875em",
            "fontWeight_bold": 700,
            "fontWeight_extraBold": 800,
            "fontWeight_regular": 400,
            "fontWeight_semiBold": 600,
            "lineHeight": 1.25,
            "lineHeight_prose": 1.5,
            "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
            "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
            "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
            "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
            "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
            "size_jumbo": "3.25em",
            "size_large": "2.5em",
            "size_medium": "2em",
            "size_small": "1.5em",
            "space_inline_lg": "1.5em",
            "space_inline_md": "1em",
            "space_inline_sm": "0.5em",
            "space_inline_xl": "2em",
            "space_inline_xs": "0.25em",
            "space_inline_xxl": "4em",
            "space_inline_xxs": "0.125em",
            "space_inset_lg": "1.5em",
            "space_inset_md": "1em",
            "space_inset_sm": "0.5em",
            "space_stack_lg": "1.5em",
            "space_stack_md": "1em",
            "space_stack_sm": "0.5em",
            "space_stack_xl": "2em",
            "space_stack_xs": "0.25em",
            "space_stack_xxl": "4em",
            "space_stack_xxs": "0.125em",
            "zIndex_100": 100,
            "zIndex_1600": 1600,
            "zIndex_200": 200,
            "zIndex_400": 400,
            "zIndex_800": 800,
          }
        }
      >
        <ThemeProvider
          theme={
            Object {
              "Link_color": "#ad0e0e",
            }
          }
        >
          <ThemeProvider
            theme={
              Object {
                "Link_color": "#ad0e0e",
              }
            }
          >
            <Link>
              <Link
                variant="regular"
              >
                <a
                  className="glamor-0"
                />
              </Link>
            </Link>
          </ThemeProvider>
        </ThemeProvider>
      </Themed(Link)>
    </ThemedComponent>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`createThemedComponent renders a Link correctly with a custom theme object 1`] = `
.glamor-0,
[data-glamor-0] {
  color: mediumvioletred;
  text-decoration: none;
}

.glamor-0:hover,
[data-glamor-0]:hover,
.glamor-0[data-simulate-hover],
[data-glamor-0][data-simulate-hover] {
  color: #1f5dc2;
  text-decoration: underline;
}

.glamor-0:focus,
[data-glamor-0]:focus,
.glamor-0[data-simulate-focus],
[data-glamor-0][data-simulate-focus] {
  color: #164ea8;
  outline: 1px solid #164ea8;
  outline-offset: 2px;
}

.glamor-0:active,
[data-glamor-0]:active,
.glamor-0[data-simulate-active],
[data-glamor-0][data-simulate-active] {
  color: #114091;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <ThemedComponent>
      <Themed(Link)
        theme={
          Object {
            "backgroundColor_danger": "#db2929",
            "backgroundColor_danger_active": "#c71818",
            "backgroundColor_danger_activeMuted": "#f79999",
            "backgroundColor_danger_focus": "#db2929",
            "backgroundColor_danger_hover": "#eb4d4d",
            "backgroundColor_disabled": "#ebeff5",
            "backgroundColor_input_danger": "#fce3e3",
            "backgroundColor_input_success": "#e8fcf2",
            "backgroundColor_input_warning": "#fcf1dc",
            "backgroundColor_link_focus": "#dde3ed",
            "backgroundColor_success": "#0a8f4c",
            "backgroundColor_success_active": "#06783f",
            "backgroundColor_success_activeMuted": "#95f5c3",
            "backgroundColor_success_focus": "#0a8f4c",
            "backgroundColor_success_hover": "#10a35a",
            "backgroundColor_warning": "#e05b2b",
            "backgroundColor_warning_active": "#cf4615",
            "backgroundColor_warning_activeMuted": "#fab69d",
            "backgroundColor_warning_focus": "#e05b2b",
            "backgroundColor_warning_hover": "#ed774c",
            "borderColor": "#c8d1e0",
            "borderColor_active": "#4a89e8",
            "borderColor_danger": "#ad0e0e",
            "borderColor_danger_active": "#7d0606",
            "borderColor_danger_focus": "#c71818",
            "borderColor_danger_hover": "#db2929",
            "borderColor_focus": "#164ea8",
            "borderColor_hover": "#2e6fd9",
            "borderColor_success": "#0a8f4c",
            "borderColor_success_active": "#046132",
            "borderColor_success_focus": "#06783f",
            "borderColor_success_hover": "#1fc06f",
            "borderColor_warning": "#d19411",
            "borderColor_warning_active": "#916504",
            "borderColor_warning_focus": "#cf4615",
            "borderColor_warning_hover": "#e3a322",
            "borderRadius_1": "0.1875em",
            "color_black": "#1d1f24",
            "color_caption": "#58606e",
            "color_gray_10": "#f5f7fa",
            "color_gray_100": "#333840",
            "color_gray_20": "#ebeff5",
            "color_gray_30": "#dde3ed",
            "color_gray_40": "#c8d1e0",
            "color_gray_50": "#afbacc",
            "color_gray_60": "#8e99ab",
            "color_gray_70": "#707a8a",
            "color_gray_80": "#58606e",
            "color_gray_90": "#434a54",
            "color_placeholder": "#8e99ab",
            "color_text": "#333840",
            "color_text_danger": "#ad0e0e",
            "color_text_danger_active": "#940909",
            "color_text_danger_focus": "#ad0e0e",
            "color_text_danger_hover": "#c71818",
            "color_text_disabled": "#afbacc",
            "color_text_ondanger": "#fff",
            "color_text_onprimary": "#fff",
            "color_text_onsuccess": "#fff",
            "color_text_onwarning": "#fff",
            "color_text_primary": "#164ea8",
            "color_text_primary_active": "#114091",
            "color_text_primary_focus": "#164ea8",
            "color_text_primary_hover": "#1f5dc2",
            "color_text_success": "#06783f",
            "color_text_success_active": "#046132",
            "color_text_success_focus": "#06783f",
            "color_text_success_hover": "#0a8f4c",
            "color_text_warning": "#bd3909",
            "color_text_warning_active": "#a83207",
            "color_text_warning_focus": "#bd3909",
            "color_text_warning_hover": "#cf4615",
            "color_theme_10": "#e6eefc",
            "color_theme_100": "#0f397d",
            "color_theme_20": "#c2dbfc",
            "color_theme_30": "#9dc2fa",
            "color_theme_40": "#72a5f2",
            "color_theme_50": "#4a89e8",
            "color_theme_60": "#2e6fd9",
            "color_theme_70": "#1f5dc2",
            "color_theme_80": "#164ea8",
            "color_theme_90": "#114091",
            "color_white": "#fff",
            "direction": "ltr",
            "fontFamily": "Open Sans",
            "fontFamily_monospace": "monospace",
            "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
            "fontSize_base": 16,
            "fontSize_h1": "2.125em",
            "fontSize_h2": "1.75em",
            "fontSize_h3": "1.375em",
            "fontSize_h4": "1.125em",
            "fontSize_h5": "0.875em",
            "fontSize_h6": "0.875em",
            "fontSize_mouse": "0.6875em",
            "fontSize_prose": "1em",
            "fontSize_ui": "0.875em",
            "fontWeight_bold": 700,
            "fontWeight_extraBold": 800,
            "fontWeight_regular": 400,
            "fontWeight_semiBold": 600,
            "lineHeight": 1.25,
            "lineHeight_prose": 1.5,
            "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
            "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
            "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
            "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
            "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
            "size_jumbo": "3.25em",
            "size_large": "2.5em",
            "size_medium": "2em",
            "size_small": "1.5em",
            "space_inline_lg": "1.5em",
            "space_inline_md": "1em",
            "space_inline_sm": "0.5em",
            "space_inline_xl": "2em",
            "space_inline_xs": "0.25em",
            "space_inline_xxl": "4em",
            "space_inline_xxs": "0.125em",
            "space_inset_lg": "1.5em",
            "space_inset_md": "1em",
            "space_inset_sm": "0.5em",
            "space_stack_lg": "1.5em",
            "space_stack_md": "1em",
            "space_stack_sm": "0.5em",
            "space_stack_xl": "2em",
            "space_stack_xs": "0.25em",
            "space_stack_xxl": "4em",
            "space_stack_xxs": "0.125em",
            "zIndex_100": 100,
            "zIndex_1600": 1600,
            "zIndex_200": 200,
            "zIndex_400": 400,
            "zIndex_800": 800,
          }
        }
      >
        <ThemeProvider
          theme={
            Object {
              "Link_color": "mediumvioletred",
            }
          }
        >
          <ThemeProvider
            theme={
              Object {
                "Link_color": "mediumvioletred",
              }
            }
          >
            <Link>
              <Link
                variant="regular"
              >
                <a
                  className="glamor-0"
                />
              </Link>
            </Link>
          </ThemeProvider>
        </ThemeProvider>
      </Themed(Link)>
    </ThemedComponent>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`createThemedComponent renders correctly 1`] = `
.glamor-0,
[data-glamor-0] {
  background-color: lavender;
  color: mediumvioletred;
  display: inline-block;
  outline: 1px solid #c8d1e0;
  padding: 0.5em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <ThemedComponent>
      <Themed(Sample)
        theme={
          Object {
            "backgroundColor_danger": "#db2929",
            "backgroundColor_danger_active": "#c71818",
            "backgroundColor_danger_activeMuted": "#f79999",
            "backgroundColor_danger_focus": "#db2929",
            "backgroundColor_danger_hover": "#eb4d4d",
            "backgroundColor_disabled": "#ebeff5",
            "backgroundColor_input_danger": "#fce3e3",
            "backgroundColor_input_success": "#e8fcf2",
            "backgroundColor_input_warning": "#fcf1dc",
            "backgroundColor_link_focus": "#dde3ed",
            "backgroundColor_success": "#0a8f4c",
            "backgroundColor_success_active": "#06783f",
            "backgroundColor_success_activeMuted": "#95f5c3",
            "backgroundColor_success_focus": "#0a8f4c",
            "backgroundColor_success_hover": "#10a35a",
            "backgroundColor_warning": "#e05b2b",
            "backgroundColor_warning_active": "#cf4615",
            "backgroundColor_warning_activeMuted": "#fab69d",
            "backgroundColor_warning_focus": "#e05b2b",
            "backgroundColor_warning_hover": "#ed774c",
            "borderColor": "#c8d1e0",
            "borderColor_active": "#4a89e8",
            "borderColor_danger": "#ad0e0e",
            "borderColor_danger_active": "#7d0606",
            "borderColor_danger_focus": "#c71818",
            "borderColor_danger_hover": "#db2929",
            "borderColor_focus": "#164ea8",
            "borderColor_hover": "#2e6fd9",
            "borderColor_success": "#0a8f4c",
            "borderColor_success_active": "#046132",
            "borderColor_success_focus": "#06783f",
            "borderColor_success_hover": "#1fc06f",
            "borderColor_warning": "#d19411",
            "borderColor_warning_active": "#916504",
            "borderColor_warning_focus": "#cf4615",
            "borderColor_warning_hover": "#e3a322",
            "borderRadius_1": "0.1875em",
            "color_black": "#1d1f24",
            "color_caption": "#58606e",
            "color_gray_10": "#f5f7fa",
            "color_gray_100": "#333840",
            "color_gray_20": "#ebeff5",
            "color_gray_30": "#dde3ed",
            "color_gray_40": "#c8d1e0",
            "color_gray_50": "#afbacc",
            "color_gray_60": "#8e99ab",
            "color_gray_70": "#707a8a",
            "color_gray_80": "#58606e",
            "color_gray_90": "#434a54",
            "color_placeholder": "#8e99ab",
            "color_text": "#333840",
            "color_text_danger": "#ad0e0e",
            "color_text_danger_active": "#940909",
            "color_text_danger_focus": "#ad0e0e",
            "color_text_danger_hover": "#c71818",
            "color_text_disabled": "#afbacc",
            "color_text_ondanger": "#fff",
            "color_text_onprimary": "#fff",
            "color_text_onsuccess": "#fff",
            "color_text_onwarning": "#fff",
            "color_text_primary": "#164ea8",
            "color_text_primary_active": "#114091",
            "color_text_primary_focus": "#164ea8",
            "color_text_primary_hover": "#1f5dc2",
            "color_text_success": "#06783f",
            "color_text_success_active": "#046132",
            "color_text_success_focus": "#06783f",
            "color_text_success_hover": "#0a8f4c",
            "color_text_warning": "#bd3909",
            "color_text_warning_active": "#a83207",
            "color_text_warning_focus": "#bd3909",
            "color_text_warning_hover": "#cf4615",
            "color_theme_10": "#e6eefc",
            "color_theme_100": "#0f397d",
            "color_theme_20": "#c2dbfc",
            "color_theme_30": "#9dc2fa",
            "color_theme_40": "#72a5f2",
            "color_theme_50": "#4a89e8",
            "color_theme_60": "#2e6fd9",
            "color_theme_70": "#1f5dc2",
            "color_theme_80": "#164ea8",
            "color_theme_90": "#114091",
            "color_white": "#fff",
            "direction": "ltr",
            "fontFamily": "Open Sans",
            "fontFamily_monospace": "monospace",
            "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
            "fontSize_base": 16,
            "fontSize_h1": "2.125em",
            "fontSize_h2": "1.75em",
            "fontSize_h3": "1.375em",
            "fontSize_h4": "1.125em",
            "fontSize_h5": "0.875em",
            "fontSize_h6": "0.875em",
            "fontSize_mouse": "0.6875em",
            "fontSize_prose": "1em",
            "fontSize_ui": "0.875em",
            "fontWeight_bold": 700,
            "fontWeight_extraBold": 800,
            "fontWeight_regular": 400,
            "fontWeight_semiBold": 600,
            "lineHeight": 1.25,
            "lineHeight_prose": 1.5,
            "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
            "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
            "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
            "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
            "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
            "size_jumbo": "3.25em",
            "size_large": "2.5em",
            "size_medium": "2em",
            "size_small": "1.5em",
            "space_inline_lg": "1.5em",
            "space_inline_md": "1em",
            "space_inline_sm": "0.5em",
            "space_inline_xl": "2em",
            "space_inline_xs": "0.25em",
            "space_inline_xxl": "4em",
            "space_inline_xxs": "0.125em",
            "space_inset_lg": "1.5em",
            "space_inset_md": "1em",
            "space_inset_sm": "0.5em",
            "space_stack_lg": "1.5em",
            "space_stack_md": "1em",
            "space_stack_sm": "0.5em",
            "space_stack_xl": "2em",
            "space_stack_xs": "0.25em",
            "space_stack_xxl": "4em",
            "space_stack_xxs": "0.125em",
            "zIndex_100": 100,
            "zIndex_1600": 1600,
            "zIndex_200": 200,
            "zIndex_400": 400,
            "zIndex_800": 800,
          }
        }
      >
        <ThemeProvider
          theme={
            Object {
              "color_text": "mediumvioletred",
            }
          }
        >
          <ThemeProvider
            theme={
              Object {
                "color_text": "mediumvioletred",
              }
            }
          >
            <Sample>
              <glamorous(span)
                className={undefined}
              >
                <span
                  className="glamor-0"
                >
                  Sample
                </span>
              </glamorous(span)>
            </Sample>
          </ThemeProvider>
        </ThemeProvider>
      </Themed(Sample)>
    </ThemedComponent>
  </ThemeProvider>
</ThemeProvider>
`;
